# ui/openapi.json
@@ -2829,6 +2829,12 @@
       "PipelineJobRequest": {
         "type": "object",
         "properties": {
+          "documentFont": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
           "documentId": {
             "type": [
               "string",
